[package]
name = "rustl"
description = "a coolection of data structures, container & algorithms"
version = "0.0.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "rustl"
path = "src/lib.rs"

[[bin]]
name = "rustlbin"
path = "src/main.rs"